@@ -1,5 +1,13 @@
 2009-11-06  Geoffrey Garen  <ggaren@apple.com>
 
+        Qt build fix: added an ExecState parameter.
+
+        * bridge/qt/qt_runtime.cpp:
+        (JSC::Bindings::convertValueToQVariant):
+        (JSC::Bindings::convertQVariantToValue):
+
+2009-11-06  Geoffrey Garen  <ggaren@apple.com>
+
         https://bugs.webkit.org/show_bug.cgi?id=31197
         Implemented a timezone cache not based on Mac OS X's notify_check API.
 
